# Sky-Observatory

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  codecov.yml  gradle.properties  settings.gradle.kts
.github/workflows/: benchmark.yml  instrumented-test.yml  observatory.yml  sample-test.yml  sdk.yml  test.yml
api/: build.gradle.kts  consumer-rules.pro
api/src/main/java/com/skyobservatory/api/: AstroEngine.java  AstroException.java  AstroSdk.java  AstroTime.java  AstronomyProvider.java  CameraOrientation.java  CartesianCoordinate.java  CelestialObject.java  DeviceOrientation.java  EphemerisResult.java  EquatorialCoordinates.java  HorizontalCoordinate.java  NativeException.java  ObservableObject.java  Observer.java  PlanetData.java  PositionResult.java  SkyCoordinate.java  SkySnapshot.java  ValidationException.java  Vector3.java  Viewport.java  VisibilityState.java  VisibleSkyRegion.java
api/src/test/java/com/skyobservatory/api/: AstroExceptionTest.java  AstroSdkTest.java  AstroTimeTest.java  CameraOrientationTest.java  CartesianCoordinateTest.java  CelestialObjectTest.java  DeviceOrientationTest.java  EphemerisResultTest.java  EquatorialCoordinatesTest.java  NativeExceptionTest.java  ObservableObjectTest.java  ObserverTest.java  PositionResultTest.java  SkyCoordinateTest.java  SkySnapshotTest.java  ValidationExceptionTest.java  Vector3Test.java  ViewportTest.java  VisibilityStateTest.java  VisibleSkyRegionTest.java
benchmark/: build.gradle.kts
benchmark/src/main/java/com/skyobservatory/benchmark/: BenchmarkRunner.java  EngineBenchmark.java  NativeBenchmark.java  RendererBenchmark.java
engine/: build.gradle.kts  consumer-rules.pro
engine/src/main/java/com/skyobservatory/engine/: DefaultAstroEngine.java  EngineInitializer.java  EphemerisCalculator.java  PositionCalculator.java  PositionProvider.java
engine/src/test/java/com/skyobservatory/engine/: DefaultAstroEngineTest.java  EngineInitializerTest.java  EphemerisCalculatorTest.java  (+1 more)
gradle/: libs.versions.toml
native/: build.gradle.kts  consumer-rules.pro
native/src/main/cpp/: CMakeLists.txt  astro_bridge.cpp  astro_bridge.map
sample-test/: build.gradle.kts  proguard-rules.pro
sample-test/src/main/: AndroidManifest.xml
sample-test/src/main/res/layout/: activity_main.xml
sample-test/src/main/res/values/: strings.xml
sky-observatory/: build.gradle.kts
sky-observatory/src/main/: AndroidManifest.xml
sky-observatory/src/main/res/layout/: activity_crash_report.xml
sky-observatory/src/main/res/values/: strings.xml
(+47 files in other folders)
